--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/lasagna.html">Lasagna</a><h1></h1>
     </body>
-
 
 
 </html>
