added beef stew page with the same elements as lasagna page. beef stew linked to index.html with unorganized list

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <a href="recipes/lasagna.html"><li>Lasagna</li></a>
+            <a href="recipes/beef stew.html"><li>Beef Stew</li></a> 
+        </ul>
+        
     </body>
 
 
